--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Foto -->
-    <img src="ich.JPG" alt="Hausservice und Klimaservice – persönlich vor Ort" class="about-photo">
+    <img src="ich.jpeg" alt="Hausservice und Klimaservice – persönlich vor Ort" class="about-photo">
   </section>
 
   <!-- Text -->
