--- a/kontakt.html
+++ b/kontakt.html
@@ -56,6 +56,8 @@
 
         <input type="email" name="email" placeholder="Ihre E-Mail-Adresse" required>
 
+        <input type="tel" name="telefon" placeholder="Telefonnummer (für Rückruf)">
+
         <input type="text" name="ort" placeholder="Ort (z. B. Gernsheim, Darmstadt, Mainz)">
 
         <textarea name="message" rows="6"
